small typo fixes

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     Horizons Office Homepage
                 </h2>
                 <p>
-                    The Horizons Helper is the evolution of an idea I've had for a while called The Horizons Toolkit. The core idea behind both projects is to create an application that is user-friendly to anyone who has the technical literacy of an elementary school teacher. This materialized in the Helper as a Flask-based web app, designed to run on the local network of our camp's office for the director, program director and office manager to easily access on their personal computers with an easy to understand and Aloha Foundation themed graphical user interface. This web app allows users to upload files like camper lists and maser schedules in the standard formats that our office already uses, and quickly turn the information in those document into the documents that we derived from them each session, such as schedule notes that get sent home, lunch table assignments and cabin groups. This information gets stored in a SQLite3 database for easy queries. Generated documents get emailed using smtplib to the user. Most importantly, there is an open activity sign up tool, which streamlines the process of digitizing our daily afternoon activity sign-ups.
+                    The Horizons Office Homepage is the evolution of an idea I've had for a while called The Horizons Toolkit. The core idea behind both projects is to create an application that is user-friendly to anyone who has the technical literacy of an elementary school teacher. This materialized in the Homepage as a Flask-based web app, designed to run on the local network of our camp's office for the director, program director and office manager to easily access on their personal computers with an easy to understand and Aloha Foundation themed graphical user interface. This web app allows users to upload files like camper lists and master schedules in the standard formats that our office already uses, and quickly turn the information in those documents into the documents that we derive from them each session, such as schedule notes that get sent home, lunch table assignments and cabin groups. This information gets stored in a SQLite3 database for easy queries. Generated documents can be emailed using smtplib to the user. Most importantly, there is an open activity sign up tool, which streamlines the process of digitizing our daily afternoon activity sign-ups, a process that was in desparate need of improvement over manual input to Google Sheets.
                 </p>
                 <p>
                     This is an ongoing project and has not been used in a summer yet.
@@ -170,11 +170,13 @@
             </div>
             <div class="project-img">
                 <img src="./Pictures/notehome.jpg" alt="" width="80%">
+                <p>Updated picture coming soon!</p>
             </div>
         </section>
         <section id="WEB">
             <div class="project-img">
                 <img src="./Pictures/metasite.jpg" alt="" width="80%">
+                <p>Updated picture coming soon!</p>
             </div>
             <div class="project-text">
                 <h2>
