--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="keywords" content="Nate Nathaniel J. Dimick Website Portfolio Orford Rivendell Brandeis Aloha Horizons">
         <meta name=”robots” content="index, follow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="google-site-verification" content="BnYoA-aVkFrik3jKktLjn15F5xg37WsT3bz8l_m5g-U" />
     </head>
     <body>
         <header>
