js overhaul follow-up

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <header>
             <h1 id="my-name">Nate Dimick</h1>
             <ol class="descriptors">
-                <li><h2>Software Engineer.</h2></li>
-                <li><h2>Roboticist.</h2></li>
-                <li><h2>Camp Counselor.</h2></li>
-                <li><h2 id="my-titles">Lifeguard.</h2></li>
+                <li><h2 class="my-titles one">Software Engineer.</h2></li>
+                <li><h2 class="my-titles two">Roboticist.</h2></li>
+                <li><h2 class="my-titles three">Camp Counselor.</h2></li>
+                <li><h2 class="my-titles four">Lifeguard.</h2></li>
             </ol>
             <ol class="social-media">
                 <li><a href="https://twitter.com/NateDimick">Twitter</a></li>
@@ -80,14 +80,14 @@
                 Keep scrolling to see a selection of some of my best projects, or click one of the links
             </p>
             <p>
-                All source code is available on my Github page, with a few exceptions.
+                The titles of each project are links to the source code on Github!
             </p>
             <ol class="nav" id="p-links">
-                
+                <!-- Will be populated with links to projects when rendered-->
             </ol>
         </section>
         <div id="projects">
-
+            <!-- will be populated with projects when rendered -->
         </div>
         <script type="text/javascript" src="projects.js"></script>
         <section id="wayback-machine">
