--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <button id="fun-button" class="middle-button button">Fun Mode</button>
                 <button id="hell-button" class="right-button button">Evil Mode</button>
                 <p id="hint"><br>Try to find all of the fun mode changes on the site!<br>(hint: hover over my picture!)</p>
-                <p id="hell"><br>Why would you click that button, even if it's an option?</p>
+                <p id="hell"><br>Why would you click that button, even if it's an option?<br>In case it's not painfully obvious, this mode is a huge joke.</p>
             </div>
         </section>
         <section id="portfolio-header">
